# stp2stl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
include/stp2stl/: stp2stl.h
src/: stp2stl.cpp  stp2stl_cli.cpp
